[workspace]
members  = ["buffer", "crates/*"]
resolver = "2"

[workspace.dependencies]
napi-ohos          = { version = "1.0.3" }
napi-derive-ohos   = { version = "1.0.3" }
napi-build-ohos    = { version = "1.0.3" }
ohos-hilog-binding = { version = "*" }

buffer = { path = "buffer" }

pnet    = { version = "0.33" }
socket2 = { version = "0.5" }
libc    = { version = "0.2" }
nix     = { git = "https://github.com/richerfu/nix.git", branch = "master" }
