[package]
name    = "ping"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
napi-ohos        = { workspace = true, features = ["napi8", "async"] }
napi-derive-ohos = { workspace = true }
pnet             = "0.33"
socket2          = { version = "0.5", features = ["all"] }

[build-dependencies]
napi-build-ohos = { workspace = true }

[profile.release]
lto   = true
strip = true
