[package]
name    = "ssh"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
napi-ohos        = { workspace = true, default-features = false, features = ["napi8", "async", "error_anyhow"] }
napi-derive-ohos = { workspace = true }
async-trait      = "0.1"
anyhow           = "1"
dirs             = "6"
russh            = { version = "0.46", features = ["vendored-openssl"] }
russh-keys       = { version = "0.46", features = ["vendored-openssl"] }
tokio            = { version = "1", features = ["full"] }


[build-dependencies]
napi-build-ohos = { workspace = true }

[profile.release]
lto           = true
codegen-units = 1
strip         = "symbols"
