[package]
name    = "traceroute"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
napi-ohos        = { workspace = true, default-features = false, features = ["napi8", "async"] }
napi-derive-ohos = { workspace = true }
pnet             = { workspace = true }
buffer           = { workspace = true }
nix              = { workspace = true, features = ["net", "socket", "uio"] }

ohos-hilog-binding = { workspace = true }
lazy_static = "1.5.0"

[build-dependencies]
napi-build-ohos = { workspace = true }

[profile.release]
lto = true
